clusters/prow/manifests/prow/01-crier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "__PROW_NAMESPACE__"
  name: crier
  labels:
    app: crier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crier
  template:
    metadata:
      labels:
        app: crier
    spec:
      serviceAccountName: crier
      terminationGracePeriodSeconds: 30
      containers:
        - name: crier
          image: us-docker.pkg.dev/k8s-infra-prow/images/crier:v20260109-e821f0db6
          args:
            - --blob-storage-workers=1
            - --config-path=/etc/config/config.yaml
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
            - --github-token-path=/etc/github/token
            - --github-workers=5
            - --job-config-path=/etc/job-config
            - --kubernetes-blob-storage-workers=1
            - --s3-credentials-file=/etc/s3-credentials/service-account.json
            - --slack-token-file=/etc/slack/token
            - --slack-workers=0 # currently there is no Slack token
            - --kubeconfig=/etc/kubeconfigs/kubeconfig
          ports:
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
            - name: job-config
              mountPath: /etc/job-config
              readOnly: true
            - name: github
              mountPath: /etc/github
              readOnly: true
            - name: slack
              mountPath: /etc/slack
              readOnly: true
            - name: kubeconfig
              mountPath: /etc/kubeconfigs
              readOnly: true
            - name: s3-credentials
              mountPath: /etc/s3-credentials
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: config
        - name: job-config
          configMap:
            name: job-config
        - name: github
          secret:
            secretName: github-token
        - name: slack
          secret:
            secretName: slack-token
        - name: kubeconfig
          secret:
            secretName: kubeconfig
        - name: s3-credentials
          secret:
            secretName: s3-credentials-internal
      nodeSelector:
        kubermatic.io/stable: "true"
      tolerations:
        - key: kubermatic.io/stable
          operator: Exists
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crier
  namespace: "__PROW_NAMESPACE__"
  name: crier
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
  selector:
    app: crier
