clusters/prow/manifests/prow/01-ghproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghproxy
  namespace: "__PROW_NAMESPACE__"
  labels:
    app: ghproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghproxy
  template:
    metadata:
      labels:
        app: ghproxy
    spec:
      containers:
        - name: ghproxy
          image: us-docker.pkg.dev/k8s-infra-prow/images/ghproxy:v20260109-e821f0db6
          args:
            - --cache-dir=/cache
            - --cache-sizeGB=99
            - --legacy-disable-disk-cache-partitions-by-auth-header=false
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ghproxy
      nodeSelector:
        kubermatic.io/stable: "true"
      tolerations:
        - key: kubermatic.io/stable
          operator: Exists
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghproxy
  name: ghproxy
  namespace: "__PROW_NAMESPACE__"
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    app: ghproxy
