clusters/prow/manifests/prow/01-minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: minio
  namespace: prow
spec:
  rules:
  # External access to MinIO for presigned URLs and artifact viewing
  - host: minio.kubestellar.io
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - minio.kubestellar.io
    secretName: minio-tls
